
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint8_t ;


 int SIZE ;

__attribute__((used)) static int find_mem(void *mem, uint8_t c)
{
 int i;
 uint8_t *p = mem;

 for (i = 0; i < SIZE; i++) {
  if (p[i] == c)
   return i;
 }

 return -1;
}
